--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Titillium Web', sans-serif;
     margin:0;
-    
+    font-size: medium;
 
 }   
 #h1color{
@@ -17,9 +17,10 @@ section{
 }
 .half-width img{
     width: 100%;
+
 }
 h1{
-    font-size: 80px;
+    font-size: 50px;
 }
 .link-button{
     text-decoration: none;
@@ -34,4 +35,10 @@ h1{
 .top-banner{
     background-image:url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.mid-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
 }
