--- a/style.css
+++ b/style.css
@@ -1,42 +1,56 @@
-body{
+body {
     font-family: 'Titillium Web', sans-serif;
-    margin:0;
+    margin: 0;
     font-size: medium;
 
-}   
-#h1color{
+}
+
+#h1color {
     color: red;
 }
-section{
+
+section {
     display: flex;
     padding-left: 20px;
     padding-bottom: 30px;
 }
-.half-width{
+
+.half-width 
+{
     width: 50%;
 }
-.half-width img{
+
+.half-width img 
+{
     width: 100%;
 
 }
-h1{
+
+h1 
+{
     font-size: 50px;
 }
-.link-button{
+
+.link-button 
+{
     text-decoration: none;
     background-color: rgb(255, 0, 0);
     color: aliceblue;
     border: 1px solid rgba(0, 0, 0, 0.151);
     border-radius: 10px;
-    padding:auto;
-    background-image: linear-gradient(red,rgba(0, 0, 0, 0.5));
-    
+    padding: auto;
+    background-image: linear-gradient(red, rgba(0, 0, 0, 0.5));
+
 }
-.top-banner{
-    background-image:url(images/top-banner.png);
+
+.top-banner 
+{
+    background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
-.mid-banner{
+
+.mid-banner 
+{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
